objects/ssot__ActivityParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityId__c</fullName>
        <label>Activity Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityObject__c</fullName>
        <label>Activity Object</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityParticipantRole__c</fullName>
        <label>Activity Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointObject__c</fullName>
        <label>Contact Point Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Activity Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705642046873_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityParticipant_ParticipantId_ma_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>ActivityParticipant_ParticipantId_ma_rel</relationshipLabel>
        <relationshipName>rel_1705642046873_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705642057215_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityParticipant_ContactPointId_m_rel</label>
        <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
        <relationshipLabel>ActivityParticipant_ContactPointId_m_rel</relationshipLabel>
        <relationshipName>rel_1705642057215_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705642058596_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityParticipant_ParticipantId_ma_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ActivityParticipant_ParticipantId_ma_rel</relationshipLabel>
        <relationshipName>rel_1705642058596_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>